--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
 </head>
 <body>
     <canvas width="500" height="500"></canvas>
-
+    <script src="keymaster.js"></script>
     <script src="moving_object.js"></script>
     <script src="asteroid.js"></script>
     <script src="game.js"></script>
     <script src="ship.js"></script>
+    <script src="bullet.js"></script>
     <script>
         var canvas = document.getElementsByTagName("canvas")[0];
         var newGame = new this.Asteroids.Game(canvas);
